--- a/app/src/main/res/layout/activity_horarios.xml
+++ b/app/src/main/res/layout/activity_horarios.xml
@@ -44,13 +44,12 @@
         app:layout_constraintStart_toStartOf="@+id/toolbar7"
         app:layout_constraintTop_toTopOf="@+id/toolbar7" />
 
-    <!-- Botones -->
 
     <Button
         android:id="@+id/btnHora21"
         android:layout_width="410dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="130dp"
+        android:layout_marginTop="36dp"
         android:backgroundTint="@color/green_A200"
         android:text="21:00 - Disponible"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -62,7 +61,7 @@
     <Button
         android:id="@+id/btnHora22"
         android:layout_width="410dp"
-        android:layout_height="150dp"
+        android:layout_height="130dp"
         android:layout_marginTop="12dp"
         android:backgroundTint="@color/green_A200"
         android:text="22:00 - Disponible"
@@ -75,7 +74,7 @@
     <Button
         android:id="@+id/btnHora23"
         android:layout_width="410dp"
-        android:layout_height="150dp"
+        android:layout_height="130dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/green_A200"
         android:text="23:00 - Disponible"
@@ -88,13 +87,15 @@
     <Button
         android:id="@+id/btnHora00"
         android:layout_width="410dp"
-        android:layout_height="150dp"
+        android:layout_height="130dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/green_A200"
         android:text="00:00 - Disponible"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/black"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnHora23" />
+        app:layout_constraintTop_toBottomOf="@+id/btnHora23"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
